# OptiSphere

./: README.md  config.py  configuration.py  main.py  pyproject.toml  requirements.txt
core/threads/: CameraThread.py  SnapshotThread.py  TimelapseThread.py  VideoThread.py
opti-sphere/: app.py  config.py  stylesheet.css
opti-sphere/core/: PathManager.py
opti-sphere/core/models/: SerialCom.py  Sphere.py  TrackingData.py
opti-sphere/core/threads/: CameraThread.py  ScanningThread.py  SerialThread.py  SnapshotThread.py  TimelapseThread.py  VideoThread.py
opti-sphere/resources/: stylesheet.css
opti-sphere/ui/: MainWindow.py
opti-sphere/ui/buttons/: IconButton.py
opti-sphere/ui/dialogs/: CalibrationDialog.py  CheckListDialog.py  EditTimelapseDialog.py  SetupScaleDialog.py
opti-sphere/ui/tabs/: MainTab.py  RotationTab.py  ScanTab.py  ScanningTab.py  SnapshotTab.py  Tab.py  TimelapseTab.py  TrackTab.py  TrackingTab.py  VideoTab.py
opti-sphere/ui/widgets/: CaptureWidget.py  CustomGraphicsView.py  HMSTimeWidget.py  ImageScale.py  ImageViewer.py  ProgressWidget.py  Rotation3DRender.py  ScanWidget.py  SerialDebugger.py  SerialTerminal.py  SerialTool.py  SnapshotWidget.py  StepWidget.py  TimelapseWidget.py  TrackWidget.py  VideoWidget.py
ui/: MainWindow.py  SidebarLayout.py
ui/dialogs/: EditNameDialog.py
ui/tabs/: CameraTab.py  SnapshotTab.py  TimelapseTab.py  VideoTab.py
ui/widgets/: CameraFeed.py  CaptureButton.py  CaptureWidget.py  ControlWidget.py  SnapshotWidget.py  TimelapseWidget.py  VideoWidget.py
